Undicesimo commit: prima analisi SonarQube, correzione codice